k8s/base/cart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
